ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration3/input.ts.stderr
error: Unexpected token `constructor`. Expected * for generator, private key, identifier or async
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration3/input.ts:2:10
  |
2 |   export constructor() { }
  |          ^^^^^^^^^^^

error[1005]: Expected '}'
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ConstructorDeclarations/parserConstructorDeclaration3/input.ts:3:1
  |
3 | }
  | ^

